--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -91,7 +91,7 @@ scrape_fbref_table <-
 ```{r Scrape Squad Standard Stats}
 # Map each league's url number and table of interest to the scrape function
 # then bind all resulting tables' rows together into a single tibble
-squads <- bind_rows(
+squads_binded <- bind_rows(
 	pmap(
 		list(squad_leagues$url_number, squad_leagues$table_num),
 		scrape_fbref_table
@@ -103,7 +103,7 @@ squads <- bind_rows(
 
 ```{r Squad Standard Stats Augmentation}
 # Calculate some extra variables
-squads <- squads |> 
+squads <- squads_binded |> 
 	mutate(goals_per_game = gls / mp,
 				 assist_rate = ast / gls,
 				 discipline_score = crd_y + 2 * crd_r,
@@ -112,7 +112,7 @@ squads <- squads |>
 
 ```{r Scrape Standings Stats}
 # Same deal as squads but for standings instead
-standings <- bind_rows(
+standings_binded <- bind_rows(
 	pmap(
 		list(standings_leagues$url_number, standings_leagues$table_num, replicate(6, 15), replicate(6, 3)),
 		scrape_fbref_table
@@ -121,15 +121,23 @@ standings <- bind_rows(
 ) |> mutate(league = standings_leagues$league[as.integer(league)])
 ```
 
-## Plots
+```{r Standings Stats Augmentation}
+standings <- standings_binded |>
+	mutate(`Top Team Scorer Goals` =
+				 		parse_number(str_extract(`Top Team Scorer`, "^.* - (\\d{1,2})$", 1)),
+				 `Top Team Scorer` =
+				 		str_extract(`Top Team Scorer`, "^(.*) - \\d{1,2}$", 1)) |>
+	relocate(`Top Team Scorer Goals`, .after = `Top Team Scorer`)
+```
 
 ```{r Avg Age vs Goals}
+titlePanel("Team Average Age vs. Goals by League")
+
 renderPlot({
 	squads |> 
 		ggplot() +
 			geom_point(aes(x = age, y = gls, color = league, shape = league), size = 3) +
-			labs(title = "Team Average Age vs. Goals by League",
-					 x = "Average Age",
+			labs(x = "Average Age",
 					 y = "Goals",
 					 color = "League",
 					 shape = "League") +
@@ -138,19 +146,22 @@ renderPlot({
 ```
 
 ```{r Possession vs Goals}
+titlePanel("Possession vs. Goals by League")
+
 renderPlot({
 	squads |> 
 		ggplot() +
 			geom_point(aes(x = poss, y = gls, color = league), size = 2, show.legend = F) +
 			facet_wrap(~league) +
-			labs(title = "Possession vs. Goals by League",
-					 x = "Possession",
+			labs(x = "Possession",
 					 y = "Goals") +
 			scale_color_colorblind()
 })
 ```
 
 ```{r Top Teams Goals per Game}
+titlePanel("Top 5 Teams by Goals per Game by League")
+
 renderPlot({
 	squads |>
 		group_by(league) |> 
@@ -159,11 +170,32 @@ renderPlot({
 			geom_col(aes(x = fct_reorder(squad, goals_per_game),
 									 y = goals_per_game,
 									 fill = league)) +
-			labs(title = "Top 5 Teams by Goals per Game by League",
-					 x = "Squad",
+			labs(x = "Squad",
 					 y = "Goals per Game",
 					 fill = "League") +
 			coord_flip() +
 			scale_fill_colorblind()
+})
+```
+
+```{r}
+titlePanel("Standings")
+
+inputPanel(
+	checkboxInput("show_all", "Show All Rows", value = FALSE)
+)
+
+DT::renderDataTable({
+	optionsStandings <- if (input$show_all) {
+		list(bPaginate = FALSE)
+	} else {
+		list(
+			pageLength = 5,
+			lengthMenu = c(5, 10, 20, 40),
+			rownames = FALSE
+		)
+	}
+	
+	DT::datatable(standings, options = optionsStandings)
 })
 ```
