--- a/Shiny_stuff.Rmd
+++ b/Shiny_stuff.Rmd
@@ -13,6 +13,9 @@ runtime: shiny
 <style>
   body, .cell-content { text-align: left !important; }
   .navbar-default { padding-top:5px; padding-bottom:5px; }
+  /* new: left‐ and right‐alignment helpers */
+  .left-align  { text-align: left  !important; }
+  .right-align { text-align: right !important; }
 </style>
 
 
@@ -40,19 +43,22 @@ squads    <- read_csv("squads.csv")
 standings <- read_csv("standings.csv")
 ```
 
-About
-==========================
+# ABOUT
+=====================================
 
-Column {data-width = 200}
+Column {data-width=600 .left-align}
 -------------------------
 
-## Introduction
+#### Introduction
 
 In this project, we explore soccer statistics from multiple professional football leagues using data from FBref (https://fbref.com/en/comps), a trusted site for advanced football analytics. While we initially focused on Major League Soccer (MLS), we extended our analysis to include other major international competitions such as the Premier League, La Liga, Bundesliga, and Serie A.
 
 Our goal was to collect and organize standardized squad-level statistics across leagues to support comparative analysis. Specifically, we targeted the "Squad Standard Stats" tables on each competition’s main stats page. These tables contain information on team performance metrics such as matches played, goals, assists, average age, possession %, and more.
 
-## Motivation
+Column {data-width=600 .left-align}
+-------------------------
+
+#### Method
 
 We chose this dataset primarily out of personal interest: one of us enjoys following global football news, while the other is an avid FC25 player. Beyond our curiosity, we recognized that this data offers a rich opportunity for cross-league comparisons.
 
@@ -62,11 +68,21 @@ By scraping the same type of statistics from each league, we aimed to answer que
 -   Is there a relationship between average age and possession percentage?
 -   How does team performance (e.g., goals, assists) vary across leagues?
 
-These questions open the door for future data visualizations (like scatterplots or heatmaps) and statistical modeling (e.g., regression of goals on age or possession). 
+These questions open the door for future data visualizations (like scatterplots or heatmaps) and statistical modeling (e.g., regression of goals on age or possession).
 
-Column {data-width = 200}
-------------------------- 
+Column {data-width=400 .right-align}
+-------------------------
 
+```{r about-image, echo=FALSE}
+renderImage({
+  list(
+    src    = "Big_five.jpg",
+    alt    = "Big Five League Logos",
+    width  = 400,
+    height = 400
+  )
+})
+```
 
 Standings 
 ==========================
