--- a/Shiny_stuff.Rmd
+++ b/Shiny_stuff.Rmd
@@ -5,17 +5,13 @@ output:
     theme:
       version: 4
       bootswatch: journal    
-    orientation: rows        
     vertical_layout: fill
 runtime: shiny
 ---
-
+  
 <style>
+    .column { vertical-align: top !important; }
   body, .cell-content { text-align: left !important; }
-  .navbar-default { padding-top:5px; padding-bottom:5px; }
-  /* new: left‐ and right‐alignment helpers */
-  .left-align  { text-align: left  !important; }
-  .right-align { text-align: right !important; }
 </style>
 
 
@@ -43,7 +39,7 @@ squads    <- read_csv("squads.csv")
 standings <- read_csv("standings.csv")
 ```
 
-# ABOUT
+ABOUT
 =====================================
 
 Column {data-width=600 .left-align}
@@ -54,9 +50,6 @@ Column {data-width=600 .left-align}
 In this project, we explore soccer statistics from multiple professional football leagues using data from FBref (https://fbref.com/en/comps), a trusted site for advanced football analytics. While we initially focused on Major League Soccer (MLS), we extended our analysis to include other major international competitions such as the Premier League, La Liga, Bundesliga, and Serie A.
 
 Our goal was to collect and organize standardized squad-level statistics across leagues to support comparative analysis. Specifically, we targeted the "Squad Standard Stats" tables on each competition’s main stats page. These tables contain information on team performance metrics such as matches played, goals, assists, average age, possession %, and more.
-
-Column {data-width=600 .left-align}
--------------------------
 
 #### Method
 
@@ -70,16 +63,27 @@ By scraping the same type of statistics from each league, we aimed to answer que
 
 These questions open the door for future data visualizations (like scatterplots or heatmaps) and statistical modeling (e.g., regression of goals on age or possession).
 
-Column {data-width=400 .right-align}
+Column {data-width=600}
 -------------------------
 
-```{r about-image, echo=FALSE}
+```{r league-image, echo=FALSE}
 renderImage({
   list(
     src    = "Big_five.jpg",
     alt    = "Big Five League Logos",
-    width  = 400,
+    width  = 600,
     height = 400
+  )
+})
+```
+
+```{r MLS-image, echo=FALSE}
+renderImage({
+  list(
+    src    = "MLS_logo.png",
+    alt    = "MLS Logo",
+    width  = 600,
+    height = 600
   )
 })
 ```
