--- a/Shiny_stuff.Rmd
+++ b/Shiny_stuff.Rmd
@@ -147,14 +147,18 @@ Column {data-width=400}
 
 ```{r Possession vs Goals}
 renderPlot({
-	squads |> 
-		ggplot() +
-			geom_point(aes(x = poss, y = gls, color = league), size = 2, show.legend = F) +
-			facet_wrap(~league) +
-			labs(title = "Possession vs. Goals by League",
-					 x = "Possession",
-					 y = "Goals") +
-			scale_color_colorblind()
+  squads |>
+    ggplot(aes(x = poss, y = gls, color = league)) +
+    geom_point(size = 2, alpha = 0.8) +
+    geom_smooth(method = "lm", se = FALSE) +
+    labs(
+      title = "Possession vs. Goals by League with Trend Lines",
+      x = "Possession (%)",
+      y = "Goals",
+      color = "League"
+    ) +
+    scale_color_colorblind() +
+    theme_minimal()
 })
 ```
 
@@ -189,7 +193,7 @@ Column {data-width=400}
 ```{r discipline-vs-ga}
 renderPlot({
   squads |>
-    ggplot(aes(x = discipline_score, y = ga, color = league)) +
+    ggplot(aes(x = discipline_score, y = g_a, color = league)) +
     geom_point(size = 2, alpha = 0.8) +
     geom_smooth(method = "lm", se = FALSE) +
     labs(
@@ -200,7 +204,6 @@ renderPlot({
     theme_bw()
 })
 ```
-
 
 ---
 
