--- a/Shiny_stuff.Rmd
+++ b/Shiny_stuff.Rmd
@@ -207,6 +207,49 @@ renderPlot({
 
 ---
 
+Performance
+==========================
+
+{data-width = 600}
+----------------------
+
+### Expected & Actual Goals For & Against
+
+```{r Performance Plot}
+renderPlot({
+	standings |> 
+	mutate(Squad = fct_reorder(Squad, GF),
+				 GFD = GF - xG,
+				 GAD = xGA - GA,
+				 GFP = ifelse(GFD < 0, 5,
+				 			 ifelse(GFD == 0, 6, 1)),
+				 GFP = as.factor(GFP),
+				 GAP = ifelse(GAD < 0, 5,
+				 			 ifelse(GAD == 0, 6, 1)),
+				 GAP = as.factor(GAP)) |> 
+		ggplot(aes(x = Squad)) +
+			geom_point(aes(y = xG), color = "skyblue") +
+			geom_segment(aes(y = xG, yend = GF, linetype = GFP),
+									 lineend = "butt", linejoin = "round",
+									 arrow = arrow(length = unit(0.2, "cm"), type = "closed"),
+									 size = 1, color = "skyblue",
+									 show.legend = F) +
+			geom_point(aes(y = xGA), color = "maroon") +
+			geom_segment(aes(y = xGA, yend = GA, linetype = GAP),
+									 lineend = "butt", linejoin = "round",
+									 arrow = arrow(length = unit(0.2, "cm"), type = "closed"),
+									 size = 1, color = "maroon",
+									 show.legend = F) +
+			facet_wrap(~league, scales = "free") +
+			coord_flip() +
+			labs(x = "Squad",
+					 y = "Goals") +
+		  theme(axis.title = element_text(size = 15),
+		  			axis.text = element_text(size = 12),
+		  			strip.text = element_text(size = 12))
+})
+```
+
 Conclusion 
 ==========================
 
