--- a/Shiny_stuff.Rmd
+++ b/Shiny_stuff.Rmd
@@ -98,7 +98,7 @@ DT::renderDataTable({
 Attacking Stats
 ==========================
 
-{data-width = 400} {.tabset}
+Column
 -------------------------
 
 ### Average Age vs. Goals
@@ -116,9 +116,18 @@ renderPlot({
 			scale_color_colorblind() +
     	theme_bw() +
 		  theme(axis.title = element_text(size = 15),
-		  			axis.text = element_text(size = 12))
+		  			axis.text = element_text(size = 12),
+		  			legend.text = element_text(size = 12),
+		  			legend.position = "left")
 })
 ```
+
+### Age Doesn't Matter?
+
+Lorem ipsum dolor
+
+Column
+-------------------------
 
 ### Possession vs. Goals by League
 
@@ -126,17 +135,25 @@ renderPlot({
 renderPlot({
   squads |>
     ggplot(aes(x = poss, y = gls, color = league)) +
-	    geom_point(aes(shape = league), size = 2, alpha = 0.8) +
+	    geom_point(aes(shape = league), size = 2, alpha = 0.8, show.legend = F) +
 	    geom_smooth(method = "lm", se = FALSE, show.legend = F) +
 	    labs(x = "Possession (%)",
 	    		 y = "Goals",
-	    		 color = "League") +
+	    		 color = "League",
+	    		 shape = "League") +
 	    scale_color_colorblind() +
 	    theme_bw() +
 		  theme(axis.title = element_text(size = 15),
 		  			axis.text = element_text(size = 12))
 })
 ```
+
+### Possession Does Matter!
+
+Lorem ipsum dolor possession
+
+Column
+-------------------------
 
 ### Top 5 Teams by Goals per Game
 
@@ -148,7 +165,8 @@ renderPlot({
 		ggplot() +
 			geom_col(aes(x = fct_reorder(squad, goals_per_game),
 									 y = goals_per_game,
-									 fill = league)) +
+									 fill = league),
+							 show.legend = F) +
 			labs(x = "Squad",
 					 y = "Goals per Game",
 					 fill = "League") +
@@ -159,26 +177,9 @@ renderPlot({
 })
 ```
 
-#### Text for Top 5 Teams by Goals per Game
+### Team Info Stuff
 
-Lorem ipmus dolor
-
-{data-width = 400} {.tabset}
----------------------------
-
-### Analysis 1
-
-Lorem
-
-### Analysis 2
-
-ipmus
-
-### Analysis 3
-
-dolor
-
----
+Yaddyada weee
 
 Defensive Stats 
 ==========================
@@ -192,15 +193,25 @@ Column {data-width=400}
 renderPlot({
   squads |>
     ggplot(aes(x = discipline_score, y = g_a, color = league)) +
-    geom_point(size = 2, alpha = 0.8) +
-    geom_smooth(method = "lm", se = FALSE) +
-    labs(
-      x = "Discipline Score",
-      y = "Goals Conceded"
-    ) +
-    theme_bw()
+	    geom_point(size = 2, alpha = 0.8) +
+	    geom_smooth(method = "lm", se = FALSE, show.legend = F) +
+	    labs(
+	      x = "Discipline Score",
+	      y = "Goals Conceded",
+	      color = "Legend"
+	    ) +
+			scale_color_colorblind() +
+	    theme_bw() +
+		  theme(axis.title = element_text(size = 15),
+		  			axis.text = element_text(size = 12),
+		  			legend.text = element_text(size = 12),
+		  			legend.position = "left")
 })
 ```
+
+### Keep yourself disciplined!
+
+Here is some good ole wisdom about being disciplined
 
 Column {data-width=400}
 -------------------------
@@ -209,30 +220,36 @@ Column {data-width=400}
 
 ```{r defense-performance}
 renderPlot({
-standings |>
-  mutate(ga_per_game = GA / MP) |>
-  ggplot(aes(
-    x     = ga_per_game,
-    y     = Pts,
-    color = league,
-    shape = league    
-  )) +
-  geom_point(size = 2, alpha = 0.7) +
-  geom_smooth(method = "lm", se = FALSE) +
-  scale_color_colorblind(name = "League") +   
-  scale_shape_discrete(name = "League") +   
-  labs(
-    x = "Goals Against per Game",
-    y = "League Points"
-  ) +
-  theme_bw()
+	standings |>
+	  mutate(ga_per_game = GA / MP) |>
+	  ggplot(aes(
+	    x     = ga_per_game,
+	    y     = Pts,
+	    color = league,
+	    shape = league    
+	  )) +
+		  geom_point(size = 2, alpha = 0.7, show.legend = F) +
+		  geom_smooth(method = "lm", se = FALSE, show.legend = F) +
+		  scale_color_colorblind(name = "League") +   
+		  scale_shape_discrete(name = "League") +   
+		  labs(
+		    x = "Goals Against per Game",
+		    y = "League Points"
+		  ) +
+		  theme_bw() +
+		  theme(axis.title = element_text(size = 15),
+		  			axis.text = element_text(size = 12))
 })
 ```
+
+### Don't Concede Those Goals
+
+Filler text filler text fillerrrrrrrrr
 
 Performance
 ==========================
 
-{data-width = 600}
+{.tabset}
 ----------------------
 
 ### Expected & Actual Goals For & Against
@@ -271,6 +288,10 @@ renderPlot({
 		  			strip.text = element_text(size = 12))
 })
 ```
+
+### Some Dang Good Performance Out There
+
+Underperformers? Never heard of them. Everyone overperformed!
 
 Conclusion 
 ==========================
